# tRust

./: .gitignore  Cargo.toml  README.md  instconfig.toml
.cargo/: config
examples/: fractal.rs  pagerank.rs  pingpong.rs  vanitykey.rs
instcollect/: Cargo.toml
instcollect/src/: lib.rs  main.rs
instdata/: .gitignore  Cargo.toml
instdata/src/: lib.rs
instrument/: Cargo.toml
instrument/src/: lib.rs
rustc-dropin/: .gitignore  Cargo.toml
rustc-dropin/src/: insertfuncs.rs  instfinder.rs  lib.rs  main.rs  pathresolver.rs
src/: main.rs
tests/common/: mod.rs
